force-app/main/default/objects/custom_create267__c/custom_create267__c.object-meta.xml
<CustomObject>
    <label>Custom created object267</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects267</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>