force-app/main/default/objects/custom_create267__c/fields/custom_create_267field576__c.field-meta.xml
<CustomField>
    <fullName>custom_create_267field576__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 267field576</label>
    <type>Checkbox</type>
</CustomField>